Changes for 2.2.13rc1

New features:
A.F....... [ZBX-1357] updated French, Spanish, Vietnamese translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
.......PS. [ZBX-6563] fixed potential incorrect data from icmppingsec item with low latency hosts (viktors)
A......... [ZBX-10587] fixed inventory mode not being inherited for host prototypes when linking template to a template/host (Ivo)
........S. [ZBX-10681] fixed loss of trailing whitespace in unquoted function parameters when creating calculated items with low level discovery (wiper)
A......... [ZBX-8924] improved performance of alert.get method (Sasha)
..F....... [ZBX-8635] fixed trigger expression constructor support of value suffixes (Cemeris)
........S. [ZBX-10674] prohibited 'band' operator for counting float values (gleb)
........S. [ZBX-10658] fixed count() evaluation for numeric values with operator and empty pattern (gleb)
........S. [ZBX-10312] changed sum(), str(), regexp(), iregexp() trigger functions to return 0 if there are no data in the requested range (wiper)

--------------------------------------------------------------------------------
Changes for 2.2.12

2.2.12rc1 was released as 2.2.12 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.12rc1

New features:
A.F....... [ZBX-1357] enabled Chinese (China), Greek, Korean, Romanian, Ukrainian, Vietnamese translations to be displayed by default (zalex_ua)
A.F....... [ZBX-1357] updated Chinese (China), Chinese (Taiwan), English (United States), French, Japanese, Korean, Polish, Russian, Ukrainian, Vietnamese translations; thanks to Zabbix translators (zalex_ua)
A......... [ZBX-9859] improved performance of screen.get method for an unprivileged user (Sasha)

Bug fixes:
A......... [ZBX-9162] fixed performance of the hostgroup.get method under MySQL (Gunars, Sasha)
.......PS. [ZBX-10493] fixed memory leak when trying to reconnect to URL (viktors)