@@ -4,6 +4,7 @@ New features:
 A.F....... [ZBX-1357] updated French, Spanish, Vietnamese translations; thanks to Zabbix translators (zalex_ua)
 
 Bug fixes:
+........S. [ZBX-10727] fixed timeout being too low when sending configuration data to active proxy (asaveljevs)
 .......PS. [ZBX-6563] fixed potential incorrect data from icmppingsec item with low latency hosts (viktors)
 A......... [ZBX-10587] fixed inventory mode not being inherited for host prototypes when linking template to a template/host (Ivo)
 ........S. [ZBX-10681] fixed loss of trailing whitespace in unquoted function parameters when creating calculated items with low level discovery (wiper)
@@ -1411,6 +1412,7 @@ New features:
 A.F....... [ZBX-1357] updated French translation; thanks to Zabbix translators (zalex_ua)
 
 Bug fixes:
+........S. [ZBX-10727] fixed timeout being too low when sending configuration data to active proxy (asaveljevs)
 ........S. [ZBX-10681] fixed loss of trailing whitespace in unquoted function parameters when creating calculated items with low level discovery (wiper)
 
 --------------------------------------------------------------------------------
